--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,7 +1,8 @@
 PORT=3000
-MONGODB_URL=
-JWT_SECRET=
-client_Url=http://localhost:5173
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+NODE_ENV=development
+
 DATABASE_URL=
+
+JWT_SECRET=
+
+CLIENT_URL=http://localhost:5173
